<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">班车来了</string>
    <string name="my_line">我的线路</string>
    <string name="my_alarm">我的提醒</string>
    <string name="setting">设置</string>
    <string name="action_about">关于</string>
    <string name="location">开启定位</string>
    <string name="favorite">收藏</string>
    <string name="relocate">刷新</string>
    <string name="reminder">提醒</string>
    <string name="calculating">获取中，请稍后…</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- offlinemap -->
    <string name="beijing">"北京"</string>
    <string name="start">"开始"</string>
    <string name="pause">"暂停"</string>
    <string name="stop">"停止"</string>
    <string name="remove">"删除"</string>
    <string name="update">"更新"</string>
    <string name="logo_position">logo位置</string>
    <string name="bottom_left">左下</string>
    <string name="bottom_center">底部居中</string>
    <string name="bottom_right">右下</string>
    <string name="center_right">右中</string>
    <string name="map_screenshot">地图截屏</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="province">省</string>
    <string name="city">市</string>
    <string name="district">区/县</string>
    <string name="all_offline">所有城市</string>
    <string name="download_offline">下载管理</string>
    <string name="city_name">城市名称</string>
    <string name="city_size">城市大小</string>
    <string name="download_progress">0%</string>
    <string name="my_city">当前城市</string>
    <string name="sso_complete">完成</string>
    <string name="share_demo">短串分享</string>
    <string name="share_description">短串分享功能演示</string>
    <string name="weather_demo">天气查询</string>
    <string name="weather_description">天气预报功能</string>
    <string name="subpoi_demo">POI父子关系</string>
    <string name="subpoi_description">介绍POI的父子关系功能</string>
    <string name="weather_live">实时</string>
    <string name="weather_forecast">预报</string>
    <string name="report_time">发布时间</string>
    <string name="location_share">位置分享</string>
    <string name="route_share">路径规划分享</string>
    <string name="poi_share">POI分享</string>
    <string name="navi_share">导航分享</string>

    <string name="map_create">创建地图</string>
    <string name="map_interactive">地图交互</string>
    <string name="map_overlay">地图上绘制</string>
    <string name="search_data">查询地图数据</string>
    <string name="search_route">出行路线规划</string>
    <string name="map_offline">离线地图</string>
    <string name="map_tools">地图计算工具</string>
    <string name="search_share">短串分享</string>
    <string name="blank"></string>
    <string name="multi_inst">地图多实例</string>
    <string name="logo">地图Logo位置</string>
    <string name="gesture">手势交互</string>
    <string name="inputtips_demo">输入提示</string>
    <string name="inputtips_description">输入提示功能</string>
    <string name="geodesic_demo">绘制大地曲线</string>
    <string name="geodesic_description">绘制大地曲线功能</string>
    <string name="colourline_demo">绘制彩色线</string>
    <string name="colourline_description">绘制彩色线功能</string>
    <string name="regeocoder_demo">逆地理编码功能</string>
    <string name="regeocoder_description">介绍regeocoder逆地理编码功能</string>
    <string name="map_zoom">自定义缩放</string>
    <string name="animate_demo">地图动画效果</string>
    <string name="animate_description">animate</string>
    <string name="custommarker_demo">自定义Marker</string>
    <string name="route_drive">驾车路径规划</string>
    <string name="route_bus">公交路径规划</string>
    <string name="route_walk">步行路径规划</string>
    <string name="route_ride">骑行路径规划</string>
    <string name="busstation_demo">公交站点查询</string>
    <string name="poiidsearch_demo">poiID搜索功能</string>
    <string name="customlocation_demo">Location小蓝点自定义功能</string>
    <string name="location_rotatemarker">定位箭头旋转</string>
    <string name="marker_click">Marker点击回调</string>
    <string name="marker_animation_demo">Marker动画功能</string>
    <string name="marker_animation_description">介绍Marker动画功能</string>
    <string name="infowindow_demo">InfoWindow功能</string>
    <string name="tileoverlay_demo">TileOverlay绘制</string>
    <string name="coordconvert_demo">坐标系转换</string>
    <string name="contains_demo">点是否在多边形内</string>
    <string name="calculateLineDistance">两点间距离</string>
    <string name="convertgeo2point_demo">经纬度转屏幕像素</string>
    <string name="routepoisearch_demo">沿途搜索</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>

    <string name="cancel">取消</string>

    <string name="contacts">通讯录</string>
    <string name="me">我</string>
    <string name="discover">发现</string>
    <string name="recommended_friends">新的朋友</string>
    <string name="group_chats">群聊</string>
    <string name="official_accounts">公众号</string>
    <string name="chat">微信</string>
    <string name="no_msg">暂时没有新消息</string>
    <string name="wechat_id">微信号</string>
    <string name="my_posts">相册</string>
    <string name="collection">收藏</string>
    <string name="wallet">钱包</string>
    <string name="card_bag">卡包</string>
    <string name="expression2">表情</string>
    <string name="settings">设置</string>
    <string name="moments">朋友圈</string>
    <string name="scan">扫一扫</string>
    <string name="shake2">摇一摇</string>
    <string name="people_nearby">附近的人</string>
    <string name="drift_bottle">漂流瓶</string>
    <string name="shopping">购物</string>
    <string name="games">游戏</string>

    <string name="menu_groupchat">发起群聊</string>
    <string name="menu_addfriend">添加朋友</string>
    <string name="menu_qrcode">扫一扫</string>
    <string name="menu_money">微信支付</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="notify_priority">notify_priority</string>
    <string name="title_activity_setting">设置</string>
    <string name="km">km</string>
    <string name="index">首页</string>
    <string name="route">路线</string>
    <string name="aboard">上车地点</string>
    <string name="mine">个人中心</string>
    <string name="search_text">搜索公交线路</string>
    <string name="my_favorite">我的收藏</string>
    <string name="index_map">地图</string>
    <string name="notwork">施工中!!!!</string>
    <string name="locating">正在定位，请稍后...</string>
    <string name="bus_list">当前位置公交线路:</string>
    <string name="nonbusline">非常抱歉，当前未搜到您周围的公交站点信息！</string>
    <string name="locating_waiting">等待定位完成</string>
    <string name="waiting_busline">正在获取公交线路信息</string>
    <string name="busline_message">线路详情</string>
    <string name="loading">加载中...</string>
    <string name="route_calculate">路线规划</string>
    <string name="search">搜索</string>
    <string name="my_location">我的位置</string>
    <string name="input_from">输入起点</string>
    <string name="input_to">输入终点</string>
    <string name="test">测试</string>
    <string name="map_select">地图选点</string>
    <string name="dot">·</string>
    <string name="confirm">确定</string>
    <string name="no_traffic">该线路暂无交通信息!</string>
    <string name="cant_getaddress">无法获取该位置信息!</string>
    <string name="not_design">本站点尚未开通公交信息查询</string>
    <string name="same_line">同站线路</string>
    <string name="input_name">输入目的站</string>
    <string name="click_show">点击站点显示信息</string>
    <string name="loading_data">正在获取信息，请稍后...</string>
    <string name="route_detail">线路详情</string>
    <string name="scheme_1">方案1</string>
    <string name="scheme_2">方案2</string>
    <string name="scheme_3">方案3</string>
    <string name="scheme_4">方案4</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="login">点击登录</string>
    <string name="user_name">用户名:</string>
    <string name="key_user">请输入用户名</string>
    <string name="password">密码:</string>
    <string name="submit">登陆</string>
    <string name="regist">注册</string>
    <string name="key_password">请输入密码</string>
    <string name="confirm_pass">确认密码</string>
    <string name="pass_again">请重复密码</string>
    <string name="nick_name">昵称</string>
    <string name="key_nickname">请输入昵称</string>
</resources>
