<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BusLineShowActivity"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <include layout="@layout/header"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/alpha_button"
                />
            <TextView
                android:id="@+id/bus_name"
                android:layout_margin="5dp"
                android:gravity="center|start"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4.3"
                android:hint=""
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="#00000000"
                />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10.6"
        >
        <RelativeLayout
            android:id="@+id/hide_bus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            >
            <TextView
                android:id="@+id/loading"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textSize="25sp"
                android:textColor="@color/text_default"
                />
            <ProgressBar
                android:layout_centerHorizontal="true"
                android:layout_above="@id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />


        </RelativeLayout>
        <LinearLayout
            android:id="@+id/busline_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/busline_bg"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white_text"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/destination"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:text=""
                    />
                <TextView
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/time_price"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:textSize="10sp"
                    android:text=""
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8.7"
                android:background="@color/busline_bg"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_marginTop="7dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:background="@drawable/corners_bg"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/duration"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:textSize="20sp"
                        android:text="@string/click_show"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1.5dp"
                        android:background="@color/busline_bg"
                        />

                </LinearLayout>
                <com.liupeng.shuttleBusComing.views.BusLineView
                    android:id="@+id/bus_station"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5.5"
                    />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="7dp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        >
                        <ImageView
                            android:id="@+id/imgView_favorite"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/ic_favorite"
                            />

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/ic_relocate"
                            />

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/ic_reminder"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="4dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/favorite"
                            android:textColor="@color/gray"
                            android:textSize="10sp"
                            />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="4dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/relocate"
                            android:textColor="@color/gray"
                            android:textSize="10sp"
                            />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="4dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/reminder"
                            android:textColor="@color/gray"
                            android:textSize="10sp"
                            />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/imgBtn_favorite"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#00000000"
                        />

                    <ImageButton
                        android:id="@+id/imgBtn_relocate"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#00000000"
                        />

                    <ImageButton
                        android:id="@+id/imgBtn_reminder"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#00000000"
                        />
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>


    </RelativeLayout>

</LinearLayout>
